# minimax_connect4

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp
common_tools/: common_tools.cpp  common_tools.hpp
curses_wrapper/: curses_wrapper.cpp  curses_wrapper.hpp
main_game/: connect4_curses.cpp  connect4_curses.hpp
minimax_algorithm/: minimax_algorithm.cpp  minimax_algorithm.hpp
